--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "poketrade",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://artchebanenko.github.io/poketrade/",
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.8",
+    "react-transition-group": "^2.6.0",
+    "redux": "^4.0.1",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +27,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {}
 }
